team post page working

--- a/nfl_guide_front/src/styles/banner.css
+++ b/nfl_guide_front/src/styles/banner.css
@@ -238,7 +238,7 @@
     justify-content: center;
 }
 
-.panhers{
+.panthers{
     width: 100vw;
     height: 25vh;/*150px;*/
     background-color: var(--panthers-color);
